[metadata]
name = glorpen-docker-exporter
version = 1.0.0
author = Arkadiusz Dzięgiel
author_email = arkadiusz.dziegiel@glorpen.pl
description = Exports docker container stats as Prometheus compatible endpoint.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/glorpen/prometheus-docker-exporter
project_urls =
    Bug Tracker = https://github.com/glorpen/prometheus-docker-exporter/issues
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.10
    Topic :: System :: Monitoring
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =  docker>=5.0.3
                    prometheus-client>=0.14.1

[options.packages.find]
where = src
